<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="page_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_button">Spotify Streamer</string>
    <string name="spotify_pressed">This button will launch my Spotify app</string>

    <string name="scores_app_button">Scores App</string>
    <string name="scores_app_pressed">This button will launch my  Football Scores app</string>

    <string name="library_app_buttton">Library App</string>
    <string name="library_app_pressed">This button will launch my Library app</string>

    <string name="build_it_bigger_button">Build It Bigger</string>
    <string name="build_it_bigger_pressed">This button will launch my Build It Bigger app</string>

    <string name="xyz_button">XYZ Reader</string>
    <string name="xyz_pressed">This button will launch my XYZ Reader app</string>

    <string name="capstone_button">Capstone: My app</string>
    <string name="capstone_pressed">This button will launch my own app Capstone</string>
</resources>
